--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,56 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 10px;
     padding: 10px;
+    transition: background-color 0.4s, color 0.4s;
 }
 
 .link:hover {
     color: #f7b600;
     background-color: white;
+}
+
+#principal {
+    width: 960px;
+    margin: 30px auto;
+    padding: 15px;
+}
+
+#principal::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.post {
+    width: 660px;
+    float: left;
+    color: black;
+    margin-right: 20px;
+}
+
+.data {
+    font-size: 13px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+#area-lateral {
+    width: 240px;
+    float: right;
+    gap: 20px;
+}
+
+#GTA {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 10);
+    margin-bottom: 15px;
+}
+
+#rodape {
+    clear: both;
+    text-align: center;
+    padding: 50px;   
+    margin-top: 70px;
 }
