--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ body {
     width: 960px;
     margin: 30px auto;
     padding: 15px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 #principal::after {
